--- a/chart/override-values.yaml
+++ b/chart/override-values.yaml
@@ -40,7 +40,7 @@ dags:
     enabled: false
     storageClassName: longhorn
   gitSync:
-    enable: true
+    enabled: true
     repo: ssh://git@github.com/cachengo/Airflow-Dags
     branch: main
     subPath: ""
